# AgenticArchitect

./: .env.docker.example  AGENTS.md  CHECKLIST.md  LICENSE  README.md  command.txt  docker-compose.yml  package-lock.json  runbackendAPI.txt
multiagentchat/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements-docker.txt
multiagentchat/data/: chat_audit.db
multiagentchat/docker/: docker-compose.observability.yml  entrypoint.sh  otel-collector-config.yaml
multiagentchat/docker/grafana/dashboards/: chat-metrics.json
multiagentchat/docs/: observability.md
multiagentchat/knowledge/pdf_fac_data/: .gitkeep
multiagentchat/knowledge/pdf_ins_data/: .gitkeep
multiagentchat/scripts/: bench_crew_latency.py  bench_results.txt  build_kb.py  qa_full_crew_test.py  qa_results.json  qa_run_tests.py
multiagentchat/src/multiagentchat/: crew.py  main.py
multiagentchat/src/multiagentchat/api/: app.py
multiagentchat/src/multiagentchat/audit/: __init__.py  cli.py  logger.py  models.py  sqlite_db.py
multiagentchat/src/multiagentchat/config/: agents.yaml  tasks.yaml
multiagentchat/src/multiagentchat/flows/: CAI_chat_flow.py  greeting.py  response_parser.py
multiagentchat/src/multiagentchat/guardrails/: respond_guardrails.py  triage_guardrails.py
multiagentchat/src/multiagentchat/kb/: chroma_client.py  intent_map.py
multiagentchat/src/multiagentchat/mcp/: __init__.py  access_audit_server.py
multiagentchat/src/multiagentchat/observability/: __init__.py  context.py  flow_metrics.py  logging.py  metrics.py  otel.py  (+8 more)
(+74 files in other folders)
