[project]
name = "multiagentchat"
version = "0.1.0"
description = "CAI Multi-Agent Chat — CrewAI Flow + sequential crew backend"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.108.0",
    "crewai-tools>=0.14.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "pypdf>=5.0.0",
    "openai>=1.0.0",
    "mcp>=1.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-openai-v2>=2.0b0",
]

[project.scripts]
multiagentchat = "multiagentchat.main:run_flow"
serve = "multiagentchat.api.app:serve"
access-audit-mcp = "multiagentchat.mcp.access_audit_server:main"
init-access-audit-db = "multiagentchat.audit.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.crewai]
type = "flow"
